# walkie

./: .dockerignore  .env.example  .gitignore  .markdownlint.yaml  .markdownlintignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  docker-compose.yml  pull_request_template.md  pyproject.toml
.claude/agents/: code-reviewer.md  product-manager.md  staff-engineer.md  tech-expert.md
.claude/skills/: caveman.md  data-engineer.md  devops-engineer.md
backend/: Dockerfile  conftest.py  entrypoint.sh  manage.py  test_migrations.py
backend/paths/: __init__.py  admin.py  apps.py  models.py  serializers.py  tests.py  views.py
backend/paths/management/: __init__.py
backend/paths/migrations/: 0001_initial.py  0002_rename_paths_path_region__0d2304_idx_paths_region__eedc14_idx_and_more.py  0003_remove_path_paths_region__37df2c_idx_and_more.py  0004_pgrouting_path_source_target.py  0005_segment_pathsegment_remove_path_source_target.py
backend/places/: __init__.py  admin.py  apps.py  models.py  serializers.py  tests.py  views.py
backend/places/migrations/: 0001_initial.py
backend/regions/: __init__.py  admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/regions/management/: __init__.py
backend/regions/migrations/: 0001_initial.py  0002_rename_regions_reg_code_a5d06d_idx_regions_code_aa1ecb_idx_and_more.py  0003_region_administrative_district_lvl_1_and_more.py
backend/routes/: __init__.py  apps.py  models.py  serializers.py  services.py  tests.py  views.py
backend/routes/management/: __init__.py
backend/routes/migrations/: 0001_initial.py  0002_route_is_custom.py  0003_route_walked.py  0004_add_custom_geometry_to_route.py  0005_remove_walked.py
backend/users/: __init__.py  admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_pathwalklog.py  (+1 more)
backend/walkie/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
backend/walks/: __init__.py  admin.py  apps.py  models.py  serializers.py  tests.py  views.py
data/: __init__.py  arguments.py  utils.py
data/providers/: __init__.py  geoportal.py  osm.py  osm_preview.py
data/tests/: test_arguments.py  test_geoportal.py  test_osm.py  test_osm_preview.py
docs/: configuration.md  data-pipeline.md  glossary.md  index.md  models.md  user-management.md
docs/onboarding/: overview.md
docs/technical/: api-overview.md  configuration.md  data-pipeline.md  frontend-architecture.md  local-setup.md  models.md  route-generation.md  testing.md  user-management.md
docs/user-guide/: 01-getting-started.md  03-managing-places.md  04-generating-routes.md  05-composing-routes.md  06-managing-routes.md  07-tracking-progress.md  08-settings.md  exploring-regions.md  tracking-progress.md
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  vitest.config.ts
frontend/src/app/: layout.tsx  (+2 more)
(+62 files in other folders)
