[project]
name = "walkie"
version = "0.1.0"
description = "Route-planning app to fully discover your favorite regions"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.2",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-gis>=1.2.0",
    "geopandas>=1.0.1",
    "psycopg[binary]>=3.3.3",
    "requests>=2.32.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pre-commit>=4.3.0",
    "pyright>=1.1.400",
    "pytest>=9.0.2",
    "pytest-django>=4.12.0",
    "ruff>=0.15.2",
]

# Below settings can be copy-pasted
[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
DJANGO_SETTINGS_MODULE = "walkie.settings"
pythonpath = ["backend"]
testpaths = ["backend", "data"]
python_files = ["test_*.py", "tests.py"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "standard"
diagnosticMode = "workspace"
disableOrganizeImports = true # let ruff do it
useLibraryCodeForTypes = true
autoImportCompletions = true
reportMissingImports = true
reportGeneralTypeIssues = true
reportInferoredType = true

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py314"
exclude = ["backend/*/migrations", ".venv"]
src = ["backend"]

[tool.ruff.lint]
ignore = [
	"W191",
	"E11",
	"E114",
	"E117",
	"D206",
	"D300",
	"W292"
]
select = [
	"E",
	"W",
	"F",
	"UP",
	"C",
	"B",
	"SIM",
	"I",
	"C90",
	"ANN",
	"TD",
	"ERA",
	"RET",
	"RUF",
	"PT",
	"D",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
